tests/ui/impl-trait/precise-capturing/forgot-to-capture-type.stderr
error: `use<...>` precise capturing syntax is currently not allowed in return-position `impl Trait` in traits
  --> $DIR/forgot-to-capture-type.rs:7:30
   |
LL |     fn bar() -> impl Sized + use<>;
   |                              ^^^^^
   |
   = note: currently, return-position `impl Trait` in traits and trait implementations capture all lifetimes in scope

error: aborting due to 1 previous error

